# nevil

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-executable.yaml  release-build.yaml
src/: app.rs  config.rs  db.rs  llm.rs  main.rs  security.rs  ui.rs
src/db/: chat.rs  mod.rs
src/db_element/: chat.rs  chat_storage.rs  db.rs  mod.rs
src/llm/: claude.rs  llm.rs  mod.rs  openai.rs
src/ui/: chat.rs  connection.rs  home.rs  left_panel.rs  mod.rs  query_result.rs  setting.rs  ui.rs
src/utils/: db_utils.rs
