[package]
name = "neVil"
version = "0.1.0"
edition = "2021"
description = "A desktop application as database query assistant."
license = "MIT OR Apache-2.0"

[[bin]]
name = "nevil"
path = "src/main.rs"

[dependencies]
egui = "0.31.0"
eframe = { version = "0.31.0", features = ["wgpu"] }
keyring = { version = "3.6.2", features = ["apple-native", "windows-native"] }

sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "mysql", "postgres"] }
tokio = { version = "1", features = ["full"] }


reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

toml = "0.8.20"
dirs = "6.0.0"
uuid = { version = "1.15.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
sled = "0.34.7"
bincode = { version = "2.0.1", features = ["serde"] }
log = "0.4.27"
egui_extras = "0.31.1"


[dev-dependencies]
tempfile = "3.17.1"